added first part and header

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
-        title Document
+        title Di Gi
         link(rel="stylesheet" href="css/libs.min.css")
         link(rel="stylesheet" href="css/style.min.css")
         link(rel="shortcut icon" href="images/favicon.ico" type="image.png")
@@ -12,6 +12,35 @@ html(lang="en")
     body
         .wrapper
             .content
+                header.header 
+                    .container
+                        .header__inner
+                            .logo
+                                a(href="#").logo__link
+                                    img(src="images/logo.png" alt="logo").logo__link-img
+                            nav.menu
+                                button.menu__btn
+                section.head(style='background-image: url(../images/bg-head.jpg);')
+                    .top-slider
+                        .top-slider__item
+                            h3.top-slider__title МЫСЛИ ГЛОБАЛЬНО
+                            p.top-slider__text Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении 
+                            button.top-slider__btn ПОДРОБНО
+                        .top-slider__item
+                            h3.top-slider__title МЫСЛИ ГЛОБАЛЬНО
+                            p.top-slider__text Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении 
+                            button.top-slider__btn ПОДРОБНО
+                        .top-slider__item
+                            h3.top-slider__title МЫСЛИ ГЛОБАЛЬНО
+                            p.top-slider__text Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении 
+                            button.top-slider__btn ПОДРОБНО
+                section.call
+                    .container
+                        .call__inner
+                            h5.call__title Вы полюбите нас с первой встречи!
+                            p.call__text Мы предоставляем комплексный подход к продвижению компании, 
+                                | продуктов и услуг в цифровой сфере.
+                            button.call__btn ПЕРЕЗВОНИТЕ МНЕ
 
 
 
@@ -19,8 +48,7 @@ html(lang="en")
 
 
 
-
-            .footer
+    .footer
         script(src="js/jquery.js")
         script(src="js/libs.min.js")
         script(src="js/main.js")
