--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,9 +11,8 @@ html {
 html,
 body {
     height: 100%;
-    position: relative;
-    background-color: #0e0e0e;
-    color: #fff;
+    min-width: 320px;
+    overflow-x: hidden;
 }
 
 .wrapper {
@@ -32,12 +31,12 @@ body {
 }
 
 body {
+    font-family: 'Roboto-Regular', 'Arial', sans-serif;
     font-weight: 400;
-    background-color: $bg;
-    color: $white;
-    @include robotoRegular;
-    font-size: 18px;
-    line-height: 21px;
+    font-size: 16px;
+    line-height: 18px;
+    min-width: 320px;
+    overflow-x: hidden;
 }
 
 a {
@@ -54,14 +53,41 @@ li {
     list-style: none;
 }
 
-.container {
-    padding: 0px 10px;
-    max-width: 1220px;
-    margin: 0 auto;
+button {
+    padding: 0;
 }
 
-.container-fluide {}
+.container {
+    padding: 0 20px;
+}
 
+@media (min-width: 640px) {
+    .container {
+        padding: 0 30px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        padding: 0 40px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .container {
+        padding: 0 40px;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1440px) {
+    .container {
+        max-width: 1320px;
+    }
+}
+
+// .container-fluide {}
 h1,
 h2,
 h3,
@@ -74,16 +100,4 @@ input,
 span {
     margin: 0;
     padding: 0;
-}
-
-.section-page {
-    padding: 100px 0;
-}
-
-.title {
-    text-align: center;
-    margin-bottom: 100px;
-    font-size: 36px;
-    line-height: 42px;
-    font-weight: 400;
 }
