--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,271 @@
-@import 'vars';
-@import 'global';
 @import 'fonts';
+@import 'global';
+@import 'vars';
+// start header
+.header {
+    background-color: $accent;
+    &__inner {
+        min-height: 80px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.logo__link {
+    margin-left: 8px;
+}
+
+.menu__btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 3px;
+    background-color: #fff;
+    border: none;
+    position: relative;
+    outline: none;
+    &::after {
+        content: '';
+        position: absolute;
+        border-radius: 1px;
+        width: 12px;
+        height: 2px;
+        background-color: $accent;
+        top: 15px;
+        left: 14px;
+        box-shadow: 0 4px 0 0 $accent, 0 8px 0 0 $accent;
+    }
+}
+
+@media (min-width: 1440px) {
+    .menu__btn {
+        margin-right: 90px;
+    }
+}
+
+.container {
+    .header {
+        &__inner {
+            min-height: 100px;
+        }
+    }
+}
+
+@media (min-width: 640px) {
+    .logo-link {
+        margin-left: 14px;
+    }
+}
+
+@media (min-width: 768px) {
+    .logo-link {
+        margin-left: 0px;
+    }
+}
+
+//end heager
+// start head 
+.head {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 193px;
+}
+
+@media (min-width: 640px) {
+    .head {
+        min-height: 386px;
+        background-position: -162px center;
+    }
+}
+
+.top-slider {
+    background: rgba(33, 33, 33, 0.5);
+    &__item {
+        color: #fff;
+        text-align: center;
+        min-height: 193px;
+    }
+    &__title {
+        font-family: 'RobotoCondensed-Regular', sans-serif;
+        font-weight: 400;
+        line-height: 28px;
+        font-size: 28px;
+        text-transform: uppercase;
+        padding: 36px 0 38px;
+        max-width: 243px;
+        margin: 0 auto;
+        position: relative;
+        &::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            height: 8px;
+            width: 61px;
+            background-color: $text-color;
+            margin: 0 auto;
+        }
+    }
+    &__btn {
+        display: none;
+    }
+    &__text {
+        display: none;
+    }
+    .slick-dots {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        bottom: 20px;
+        left: 0;
+        right: 0;
+        .slick-active {
+            button {
+                background-color: transparent;
+                border: 1px solid $text-color;
+            }
+        }
+        button {
+            border: none;
+            font-size: 0;
+            background-color: $accent;
+            padding: 0;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            margin: 0 10px;
+        }
+    }
+}
+
+@media (min-width: 640px) {
+    .top-slider {
+        &__item {
+            min-height: 386px;
+        }
+        &__title {
+            font-size: 60px;
+            line-height: 60px;
+            padding: 50px 0 15px;
+            margin: 0 auto 30px;
+            max-width: 520px;
+        }
+        &__btn {
+            display: block;
+            margin: 0 auto 113px;
+            font-size: 18px;
+            background-color: $accent;
+            color: $bg-color;
+            padding: 16px 45px;
+            border-radius: 3px;
+            border: none;
+            font-weight: 500;
+        }
+        .slick-dots {
+            bottom: 50px;
+        }
+        .slick-arrow {
+            width: 56px;
+            height: 56px;
+            border: none;
+            position: absolute;
+            z-index: 6;
+            right: 0;
+        }
+        .slick-prev {
+            background-color: $accent;
+            top: calc(50% - 56px);
+        }
+        .slick-next {
+            background-color: $bg-color;
+            bottom: calc(50% - 56px);
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .top-slider {
+        &__item {
+            min-width: 465px;
+        }
+        &__title {
+            padding: 87px 0 0;
+            margin: 0 auto 0;
+            &::after {
+                display: none;
+            }
+        }
+        &__text {
+            display: block;
+            padding: 25px 0 32px;
+            font-family: 'RobotoCondensed-Regular', sans-serif;
+            font-weight: 400;
+            line-height: 20px;
+            font-size: 18px;
+            max-width: 587px;
+            margin: 0 auto;
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .top-slider {
+        &__item {
+            min-height: 618px;
+        }
+        &__title {
+            padding-top: 101px;
+            font-size: 84px;
+            line-height: 84px;
+            letter-spacing: 2px;
+            max-width: 750px;
+        }
+        .slick-dots {
+            bottom: 80px;
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .top-slider {
+        &__item {
+            min-height: 668px;
+        }
+        &__title {
+            padding-top: 107px;
+            font-size: 96px;
+            line-height: 96px;
+            max-width: 865px;
+        }
+        &__text {
+            font-size: 24px;
+            line-height: 26px;
+            max-width: 886px;
+        }
+    }
+}
+
+// end head
+// start call
+.call {
+    background-color: $accent;
+    padding: 40px;
+    color: #fff;
+    text-align: center;
+    &__title {
+        @extend %roboto-500;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 24px;
+        margin-bottom: 10px;
+    }
+    &__text {
+        @extend %dosis-300;
+    }
+    &__btn {}
+}
+
+// end call
 @import 'media';
