--- a/app/index.pug
+++ b/app/index.pug
@@ -37,9 +37,9 @@ html(lang="en")
                 section.call
                     .container
                         .call__inner
-                            h5.call__title Вы полюбите нас с первой встречи!
-                            p.call__text Мы предоставляем комплексный подход к продвижению компании, 
-                                | продуктов и услуг в цифровой сфере.
+                            .call__box 
+                                h5.call__title Вы полюбите нас с первой встречи!
+                                p.call__text Мы предоставляем комплексный подход к продвижению компании, продуктов и услуг в цифровой сфере.
                             button.call__btn ПЕРЕЗВОНИТЕ МНЕ
 
 
