--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -244,6 +244,16 @@
             line-height: 26px;
             max-width: 886px;
         }
+        .slick-arrow {
+            width: 70px;
+            height: 70px;
+        }
+        .slick-prev {
+            top: calc(50% - 70px);
+        }
+        .slick-next {
+            bottom: calc(50% - 70px);
+        }
     }
 }
 
@@ -259,12 +269,61 @@
         font-weight: 500;
         font-size: 24px;
         line-height: 24px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     &__text {
         @extend %dosis-300;
+        margin-bottom: 40px;
     }
-    &__btn {}
+    &__btn {
+        padding: 16px 15px;
+        background-color: $bg-color;
+        color: $accent;
+        font-size: 18px;
+        @extend %roboto-500;
+        border-radius: 3px;
+        text-transform: uppercase;
+        border: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .call {
+        text-align: left;
+        &__inner {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__box {
+            max-width: 427px;
+        }
+        &__text {
+            margin-bottom: 0;
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .call {
+        &__inner {
+            padding: 0 80px;
+        }
+        &__box {
+            max-width: 695px;
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .call {
+        &__inner {
+            padding: 0 80px;
+        }
+        &__box {
+            max-width: 796px;
+        }
+    }
 }
 
 // end call
