--- a/app/index.pug
+++ b/app/index.pug
@@ -41,7 +41,62 @@ html(lang="en")
                                 h5.call__title Вы полюбите нас с первой встречи!
                                 p.call__text Мы предоставляем комплексный подход к продвижению компании, продуктов и услуг в цифровой сфере.
                             button.call__btn ПЕРЕЗВОНИТЕ МНЕ
-
+                section.services
+                    .container
+                        .services__inner
+                            .services__head
+                                h4.services__title.title  Сервис
+                                p.services__descr От идеи до незабываемого и измеримого результата.
+                                p.services__text Интеграция безупречного производства, передовых технологий и тщательного измерения производительности
+                            .services__items
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-1.png" alt="icon")
+                                        h6.services__item-title СТРАТЕГИЯ
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ  
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-2.png" alt="icon")
+                                        h6.services__item-title АНАЛИЗ
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-3.png" alt="icon")
+                                        h6.services__item-title СОЦ СЕТИ
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-4.png" alt="icon")
+                                        h6.services__item-title РАЗВИТИЕ
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-5.png" alt="icon")
+                                        h6.services__item-title КОНТЕНТ
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-6.png" alt="icon")
+                                        h6.services__item-title ДИЗАЙН UX
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-7.png" alt="icon")
+                                        h6.services__item-title ТАРГЕТИРОВАННАЯ РЕКЛАМА
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
+                                .services__item
+                                    .services__item-inner
+                                        img.services__item-img(src="images/serv-8.png" alt="icon")
+                                        h6.services__item-title ПРОДУКТ
+                                        p.services__item-text Создадим уникальный и удобный дизайн..
+                                        a.services__item-link(href="#") ПОДРОБНЕЕ 
 
 
 
