--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,5 @@
+@import 'fonts';
+@import 'vars';
 html {
     box-sizing: border-box;
 }
@@ -37,6 +39,7 @@ body {
     line-height: 18px;
     min-width: 320px;
     overflow-x: hidden;
+    color: $default-color;
 }
 
 a {
@@ -101,4 +104,30 @@ input,
 span {
     margin: 0;
     padding: 0;
+}
+
+.title {
+    font-size: 24px;
+    line-height: 28px;
+    @extend %robotocondensed-400;
+    position: relative;
+    padding-bottom: 28px;
+    &::after {
+        content: '';
+        position: absolute;
+        width: 50px;
+        height: 8px;
+        background-color: $accent;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
+        bottom: 0;
+    }
+}
+
+@media (min-width: 640px) {
+    .title {
+        font-size: 48px;
+        line-height: 56px;
+    }
 }
