--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -261,7 +261,7 @@
 // start call
 .call {
     background-color: $accent;
-    padding: 40px;
+    padding: 35px;
     color: #fff;
     text-align: center;
     &__title {
@@ -327,4 +327,234 @@
 }
 
 // end call
+// start services
+.services {
+    text-align: center;
+    padding: 25px 0 40px;
+    &__title {
+        margin-bottom: 47px;
+        color: $accent;
+    }
+    &__descr {
+        line-height: 24px;
+        font-size: 20px;
+        color: $text-color;
+        margin-bottom: 21px;
+    }
+    &__text {
+        color: #797979;
+        margin-bottom: 40px;
+        line-height: 17px;
+        font-size: 15px;
+    }
+    &__item {
+        min-height: 310px;
+        padding: 0 18px;
+        border: 1px solid $bg-color;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border-bottom: none;
+        &:last-child {
+            border-bottom: 1px solid $bg-color;
+        }
+        &:hover {
+            .services__item-link,
+            .services__item-text {
+                display: block;
+            }
+            .services__item-img {
+                margin-bottom: 14px;
+            }
+            .services__item-title {
+                margin-bottom: 30px;
+            }
+            .services__item-inner {
+                border: 4px solid $accent;
+                margin: 18px 0;
+                padding: 25px 20px 5px;
+                min-height: 277px;
+            }
+        }
+    }
+    &__item-img {
+        margin-bottom: 30px;
+    }
+    &__item-title {
+        line-height: 19px;
+        letter-spacing: 2px;
+        font-size: 16px;
+        color: $text-color;
+        @extend %robotocondensed-700;
+    }
+    &__item-text {
+        display: none;
+        margin-bottom: 17px;
+    }
+    &__item-link {
+        display: none;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 2px;
+        color: $accent;
+        @extend %robotocondensed-700;
+        text-transform: uppercase;
+    }
+}
+
+@media (min-width: 640px) {
+    .services {
+        padding: 25px 0 0;
+        &__title {
+            margin-bottom: 20px;
+            padding-bottom: 0;
+            &::after {
+                display: none;
+            }
+        }
+        &__descr {
+            padding-bottom: 38px;
+            font-size: 24px;
+            margin-bottom: 31px;
+            position: relative;
+            &::after {
+                content: '';
+                position: absolute;
+                width: 100px;
+                height: 8px;
+                background-color: $accent;
+                bottom: 0;
+                margin: 0 auto;
+                left: 0;
+                right: 0;
+            }
+        }
+        &__text {
+            line-height: 24px;
+            font-size: 18px;
+        }
+        &__items {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0 -30px;
+        }
+        &__item {
+            width: 50%;
+            &:nth-child(even) {
+                border-left: none;
+            }
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .services {
+        padding: 50px 0 0;
+        &__title {
+            margin-bottom: 30px;
+        }
+        &__descr {
+            text-align: left;
+            &::after {
+                margin-left: 0;
+            }
+        }
+        &__text {
+            margin-bottom: 27px;
+            text-align: left;
+        }
+        &__items {
+            margin: 0 -40px;
+        }
+        &__item {
+            padding: 0 65px;
+            min-height: 334px;
+            &:hover {
+                padding: 0 18px;
+                .services__item-inner {
+                    min-height: 288px;
+                    padding: 35px 60px 5px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .services {
+        padding: 52px 0 0;
+        &__title {
+            margin-bottom: 60px;
+        }
+        &__descr {
+            padding-bottom: 46px;
+            margin-bottom: 40px;
+        }
+        &__text {
+            margin-bottom: 32px;
+            max-width: 608px;
+        }
+        &__item {
+            width: 25%;
+            padding: 0 17px;
+            min-height: 277px;
+            &:nth-child(2),
+            &:nth-child(6) {
+                border-right: none;
+            }
+            &:hover {
+                padding: 0 17px;
+                .services__item-inner {
+                    min-height: 255px;
+                    padding: 21px 9px 5px;
+                    margin: 10px 0;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .services {
+        padding: 0;
+        &__inner {
+            display: flex;
+            justify-content: space-between;
+        }
+        &__title {
+            margin-bottom: 60px;
+            text-align: left;
+        }
+        &__descr {
+            padding-bottom: 46px;
+            margin-bottom: 40px;
+        }
+        &__text {
+            margin-bottom: 32px;
+            max-width: 608px;
+        }
+        &__item {
+            width: 25%;
+            padding: 0 17px;
+            min-height: 277px;
+            &:nth-child(2),
+            &:nth-child(6) {
+                border-right: none;
+            }
+            &:hover {
+                padding: 0 17px;
+                .services__item-inner {
+                    min-height: 255px;
+                    padding: 21px 9px 5px;
+                    margin: 10px 0;
+                }
+            }
+        }
+    }
+}
+
+// end services
 @import 'media';
