added project and team sections

--- a/app/index.pug
+++ b/app/index.pug
@@ -97,6 +97,50 @@ html(lang="en")
                                         h6.services__item-title ПРОДУКТ
                                         p.services__item-text Создадим уникальный и удобный дизайн..
                                         a.services__item-link(href="#") ПОДРОБНЕЕ 
+                section.project
+                    .container
+                        h4.project__title.title Наши Проекты
+                        .project__items
+                            .project__item
+                                .project__item-img(style="background-image: url(images/project-1.jpg)")
+                                    .project__item-inner
+                                        a.project__item-info(href="#")
+                                            img(src="images/info.svg" alt="")
+                                        a.project__item-search(href="#")
+                                            img(src="images/search.svg" alt="")
+                                a(href="#").project__item-link Lalique бутик
+                            .project__item
+                                .project__item-img(style="background-image: url(images/project-2.jpg)")
+                                    .project__item-inner
+                                        a.project__item-info(href="#")
+                                            img(src="images/info.svg" alt="")
+                                        a.project__item-search(href="#")
+                                            img(src="images/search.svg" alt="")
+                                a(href="#").project__item-link Строительство домов
+                            .project__item
+                                .project__item-img(style="background-image: url(images/project-3.jpg)")
+                                    .project__item-inner
+                                        a.project__item-info(href="#")
+                                            img(src="images/info.svg" alt="")
+                                        a.project__item-search(href="#")
+                                            img(src="images/search.svg" alt="")
+                                a(href="#").project__item-link Кофейня
+                            .project__item
+                                .project__item-img(style="background-image: url(images/project-4.jpg)")
+                                    .project__item-inner
+                                        a.project__item-info(href="#")
+                                            img(src="images/info.svg" alt="")
+                                        a.project__item-search(href="#")
+                                            img(src="images/search.svg" alt="")
+                                a(href="#").project__item-link Уникальные туры
+                section.team
+                    .container
+                        .team__inner
+                            img.team__images(src="images/team.jpg" alt="")
+                            .team__content
+                                h4.team__title.title Команда
+                                p.team__text Наша команда - это наша самая большая ценность. Мы трудились, чтобы собрать группу  экспертов, чьи навыки дополняют друг друга. У членов нашей команды разные истории, но мы разделяем общую страсть к идеалу. Мы верим, чтобы оставаться профессионалом, нужно развиваться, поэтому мы постоянно ищем способы, как стать лучше в том, что мы делаем.
+                                button.team__btn СМОТРЕТЬ ВИДЕО
 
 
 
