--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -361,7 +361,9 @@
         &:hover {
             .services__item-link,
             .services__item-text {
-                display: block;
+                opacity: 1;
+                height: auto;
+                overflow: visible;
             }
             .services__item-img {
                 margin-bottom: 14px;
@@ -377,6 +379,9 @@
             }
         }
     }
+    &__item-inner {
+        transition: all .3s;
+    }
     &__item-img {
         margin-bottom: 30px;
     }
@@ -387,12 +392,17 @@
         color: $text-color;
         @extend %robotocondensed-700;
     }
+    &__item-text,
+    &__item-link {
+        opacity: 0;
+        height: 0;
+        overflow: hidden;
+        transition: all .3s;
+    }
     &__item-text {
-        display: none;
         margin-bottom: 17px;
     }
     &__item-link {
-        display: none;
         font-size: 16px;
         line-height: 19px;
         letter-spacing: 2px;
@@ -523,38 +533,95 @@
         &__inner {
             display: flex;
             justify-content: space-between;
+            margin: 0 -100px 0 -50px;
+        }
+        &__head {
+            min-width: 350px;
+            max-width: 350px;
+            margin-right: 100px;
         }
         &__title {
-            margin-bottom: 60px;
+            margin: 90px 0 70px;
             text-align: left;
         }
         &__descr {
-            padding-bottom: 46px;
-            margin-bottom: 40px;
+            padding-bottom: 38px;
+            margin-bottom: 35px;
         }
-        &__text {
-            margin-bottom: 32px;
-            max-width: 608px;
+        &__items {
+            margin: 0;
         }
         &__item {
             width: 25%;
-            padding: 0 17px;
-            min-height: 277px;
-            &:nth-child(2),
-            &:nth-child(6) {
-                border-right: none;
-            }
+            padding: 0 5px;
+            height: 273px;
             &:hover {
-                padding: 0 17px;
+                padding: 0 5px;
                 .services__item-inner {
                     min-height: 255px;
-                    padding: 21px 9px 5px;
-                    margin: 10px 0;
+                    padding: 10px 3px 5px;
+                    margin: 5px 0;
                 }
             }
         }
     }
 }
 
-// end services
+// end service
+// start project
+.project {
+    text-align: center;
+    padding: 20px 0 40px;
+    background: linear-gradient(180deg, #2B4074 0%, rgba(43, 64, 116, 0) 100%);
+    &__title {
+        color: #fff;
+        margin-bottom: 40px;
+        &::after {
+            background-color: #fff;
+        }
+    }
+    &__item-img {
+        min-height: 250px;
+        border-radius: 4px;
+        padding: 14px 12px;
+        &:hover {
+            .project__item-inner {
+                opacity: 1;
+            }
+        }
+    }
+    &__item-inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba($bg-color, .83);
+        min-height: 227px;
+        border-radius: 4px;
+        opacity: 0;
+        transition: all .3s;
+    }
+    &__item-info,
+    &__item-search {
+        margin: 0 7px;
+    }
+    &__item-link {
+        display: block;
+        padding: 20px 0;
+        font-size: 16px;
+        letter-spacing: 2px;
+        color: $accent;
+        @extend %robotocondensed-700;
+    }
+}
+
+// end projects
+// start team
+.team {
+    padding: 20px 0 40px;
+    &__images {
+        width: 100%;
+    }
+}
+
+// end team
 @import 'media';
