added adaptive for project

--- a/app/index.pug
+++ b/app/index.pug
@@ -139,7 +139,9 @@ html(lang="en")
                             img.team__images(src="images/team.jpg" alt="")
                             .team__content
                                 h4.team__title.title Команда
-                                p.team__text Наша команда - это наша самая большая ценность. Мы трудились, чтобы собрать группу  экспертов, чьи навыки дополняют друг друга. У членов нашей команды разные истории, но мы разделяем общую страсть к идеалу. Мы верим, чтобы оставаться профессионалом, нужно развиваться, поэтому мы постоянно ищем способы, как стать лучше в том, что мы делаем.
+                                .team__text 
+                                    p Наша команда - это наша самая большая ценность. Мы трудились, чтобы собрать группу  экспертов, чьи навыки дополняют друг друга. 
+                                    p У членов нашей команды разные истории, но мы разделяем общую страсть к идеалу. Мы верим, чтобы оставаться профессионалом, нужно развиваться, поэтому мы постоянно ищем способы, как стать лучше в том, что мы делаем.
                                 button.team__btn СМОТРЕТЬ ВИДЕО
 
 
