--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -129,5 +129,8 @@ span {
     .title {
         font-size: 48px;
         line-height: 56px;
+        &::after {
+            width: 100px;
+        }
     }
 }
