--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -276,10 +276,11 @@
         margin-bottom: 40px;
     }
     &__btn {
-        padding: 16px 15px;
+        padding: 16px 7px;
         background-color: $bg-color;
         color: $accent;
         font-size: 18px;
+        line-height: 18px;
         @extend %roboto-500;
         border-radius: 3px;
         text-transform: uppercase;
@@ -571,7 +572,7 @@
 // start project
 .project {
     text-align: center;
-    padding: 20px 0 40px;
+    padding: 20px 0;
     background: linear-gradient(180deg, #2B4074 0%, rgba(43, 64, 116, 0) 100%);
     &__title {
         color: #fff;
@@ -582,6 +583,9 @@
     }
     &__item-img {
         min-height: 250px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
         border-radius: 4px;
         padding: 14px 12px;
         &:hover {
@@ -614,12 +618,126 @@
     }
 }
 
+@media (min-width: 640px) {
+    .project {
+        padding: 40px 0 20px;
+        &__item-img {
+            min-height: 460px;
+            padding: 21px 24px;
+        }
+        &__item-inner {
+            min-height: 417px;
+        }
+        &__item-link {
+            font-size: 20px;
+            line-height: 23px;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .project {
+        padding: 80px 0 60px;
+        &__items {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        &__item-img {
+            min-height: 282px;
+            width: 317px;
+            padding: 12px 14px;
+        }
+        &__item-inner {
+            min-height: 256px;
+        }
+        &__item-link {
+            padding: 30px 0;
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .project {
+        &__items {
+            justify-content: center;
+        }
+        &__item-img {
+            margin: 0 12px;
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .project {
+        &__items {
+            flex-wrap: nowrap;
+            justify-content: space-between;
+        }
+        &__item-img {
+            min-height: 282px;
+            width: 300px;
+        }
+        &__item-img {
+            margin: 0;
+        }
+    }
+}
+
 // end projects
 // start team
 .team {
     padding: 20px 0 40px;
+    text-align: center;
     &__images {
         width: 100%;
+        margin-bottom: 40px;
+    }
+    &__title {
+        color: $text-color;
+        margin-bottom: 23px;
+    }
+    &__text {
+        margin-bottom: 84px;
+    }
+    &__btn {
+        border: none;
+        text-transform: uppercase;
+        border-radius: 3px;
+        padding: 21px 26px;
+        color: $bg-color;
+        background-color: $accent;
+        font-weight: 500;
+    }
+}
+
+@media (min-width: 640px) {
+    .team {
+        padding: 46px 0 53px;
+        &__title {
+            margin-bottom: 40px;
+        }
+        &__text {
+            margin-bottom: 56px;
+        }
+        &__btn {
+            font-size: 20px;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .team {
+        padding: 46px 0 53px;
+        &__title {
+            margin-bottom: 40px;
+        }
+        &__text {
+            margin-bottom: 56px;
+        }
+        &__btn {
+            font-size: 20px;
+        }
     }
 }
 
